precompiles/macro/tests/compile-fail/precompile/handle/set-missing.stderr
error: PrecompileSet methods must have at least 2 parameters (the precompile instance discriminant and the PrecompileHandle)
  --> tests/compile-fail/precompile/handle/set-missing.rs:27:2
   |
27 |     fn foo(_: u32) {
   |     ^^^^^^^^^^^^^^
